<resources>
    <string name="app_name">Lesson_18_GMapExperience</string>
    <string name="title_activity_maps">MapExp</string>
    <string name="delete_all">Delete all</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_answer">Yes</string>
    <string name="no_answer">No</string>
    <string name="show_location">Show Location</string>
    <string name="latitude">Latitude</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="longitude">Longitude</string>
    <string name="your_current_location">Your current location</string>
    <string name="ok">Ok</string>
    <string name="long_click">LONG CLICK TO CREATE CUSTOM MARKER</string>
    <string name="marker_selected">Marker selected</string>
    <string name="here_we_are">Here we are</string>
    <string name="type_marker_text">Type marker text here:</string>
    <string name="standard_marker">Standard marker</string>
    <string name="customized_marker">Customized marker</string>
    <string name="select_marker_image">Select marker image</string>
    <string name="select_image">Select image</string>
    <string name="cancel">Cancel</string>
    <string name="set_custom_marker_fileds">Set custom marker fields</string>
</resources>
